--- a/datas_OPBK/app_datas_regulatorias/templates/tarefas_list.html
+++ b/datas_OPBK/app_datas_regulatorias/templates/tarefas_list.html
@@ -7,6 +7,12 @@
         body {
             font-family: 'Trebuchet MS';
         }
+
+        .back-button {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+        }
     </style>
 </head>
 
@@ -24,6 +30,8 @@
             <button id="printButton" class="btn btn-primary"> Imprimir </button>
         </div>
     </header>
+
+    <a href="/" class="btn btn-secondary back-button">Voltar</a>
 
     <div class="container mt-4">
         <ul class="list-group">
